--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <nav>
                     <ul id="menuList">
                         <li><a href="#home">HOME</a></li>
-                        <li><a href="#about">ABOUT US</a></li>
-                        <li><a href="#contact">CONTACT US</a></li>
+                        <li><a href="#about">ABOUT</a></li>
+                        <li><a href="#contact">CONTACT</a></li>
                     </ul>
                 </nav>
                 <!-- <div class="toggle_navbar"> -->
-                <img src="logo/toggle.png" class="toggle_navbar" alt="" onclick="togglemenu()">
+                <img src="images/toggle.png" class="toggle_navbar" alt="" onclick="togglemenu()">
                 <!-- </div> -->
             </div>
             <!-- navbar end-->
@@ -522,7 +522,7 @@
                         </div>
                         <table>
                             <tr>
-                                <td><img src="./logo/map.png" alt=""></td>
+                                <td><img src="./images/map.png" alt=""></td>
                                 <td>
                                     <p>
                                         Shop No. 01 I Think Solutions<br>
@@ -533,7 +533,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./logo/message.png" alt=""></td>
+                                <td><img src="./images/message.png" alt=""></td>
                                 <td>
                                     <p>
                                         thinksolution2014@gmail.com
@@ -541,14 +541,14 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./logo/call.png" alt=""></td>
+                                <td><img src="./images/call.png" alt=""></td>
                                 <td>
                                     <p>+91 72086 93598<br>
                                         +91 91673 00235</p>
                                 </td>
                             </tr>
                             <tr>
-                                <td><img src="./logo/whatsapp 1.png" alt=""></td>
+                                <td><img src="./images/whatsapp 1.png" alt=""></td>
                                 <td>
                                     <p>+91 72086 93598<br>
                                         +91 91673 00235</p>
