--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <!-- Header start -->
             <div id ="home" class="magtapp_wrapper_header">
-                <p>WE HELP TO GROW BUSINESS<br> with</p>
+                <p>WE HELP TO GROW YOUR BUSINESS<br> with</p>
                 <p>YOUR VISION, THROUGH I.T. SOLUTIONS !</p>
             </div>
             <!-- download buttons start -->
