--- a/index.html
+++ b/index.html
@@ -499,16 +499,16 @@
                         <div class="contact_p">
                             <p>Want Us to Contact you</p>
                         </div>
-                        <form>
+                        <form action="https://formsubmit.co/thinksolution2014@gmail.com" method="POST">
                             <div class="input_row">
                                 <div class="input_group">
-                                    <input type="text" placeholder="Full name" name="name">
+                                    <input type="text" placeholder="Full name" name="name" required>
                                 </div>
                                 <div class="input_group">
-                                    <input type="email" placeholder="Email" name="email">
+                                    <input type="email" placeholder="Email" name="email" required>
                                 </div>
                                 <div class="input_group">
-                                    <input rows="4" placeholder="Send message" name="message" id="message">
+                                    <input rows="5" placeholder="Send message" name="message" id="message" required>
                                 </div>
                                 <div class="input_group">
                                     <button type="button" onclick="location.href='thank_you.html'">Send</button>
