fixed image and email forwaerding

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <!-- download buttons end -->
 
-            <section class="animation scale-in-bottom">
+            <section class=" scale-in-bottom">
                 <div class="wrapper_animation ">
                     <img src="images/banner__1_-removebg.png" alt="">
                 </div>
@@ -511,7 +511,7 @@
                                     <input rows="5" placeholder="Send message" name="message" id="message" required>
                                 </div>
                                 <div class="input_group">
-                                    <button type="submit" onclick="location.href='thank_you.html'">Send</button>
+                                    <button type="submit">Send</button>
                                 </div>
                             </div>
                         </form>
